package pookemon;

public interface Efecto {
    
}
