@startuml diagrama de clases

left to right direction
package "datos"{

    package "pookemon"{


        Class Pookemon{

        }

        Class Estadisticas{

        }

        Class Poccion{

        }

        Class RecuperarPPS{

        }

        abstract Class Objecto{

        }

        class MovimientoEspecial{

        }

        Class MovimientoFisico{

        }

        abstract Class Movimiento{

        }

        Class EfectoEnvenenamiento{

        }
        Class EfectoParalisis{
            
        }
        Class EfectoQuemadura{
            
        }

        interface Efecto{

        }
    }
    
    package "registro"{

        Class Entrenador{

        }

        Class Organizador{

        }
    }

    package "conf_arena"{

        Class ArenaConf{

        }
    }
    
}

ArenaConf "1" *-- "*" Pookemon
ArenaConf "1" *-- "*" Movimiento

Organizador "1" *-- "1" ArenaConf

Entrenador "1" o-- "3" Pookemon
Entrenador "1" o-- "*" Objecto 

Pookemon "1" o-- "4" Movimiento
Pookemon "1" *-- "1" Estadisticas
Pookemon "1" o-- "0..1" Efecto

Objecto <|-- Poccion
Objecto <|-- RecuperarPPS

Movimiento <|-- MovimientoEspecial
Movimiento <|-- MovimientoFisico

Efecto <|.. EfectoEnvenenamiento
Efecto <|.. EfectoParalisis
Efecto <|.. EfectoQuemadura

@enduml
